--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "^11.0.0",
     "nodemailer": "^6.6.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "xlsx": "^0.18.5"
   }
 }
